[project]
name = "es-tools"
version = "1.0"
description='Media Cloud Elasticsearch tools'
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "elasticsearch"
]

[tool.isort]
profile = "black"

[tool.mypy]
# from rss-fetcher via story-indexer:
# originally from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# from https://quantlane.com/blog/type-checking-large-codebase/
# in the order they appear:
disallow_untyped_calls = true
disallow_untyped_decorators = true
#disallow_any_generics = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_configs = true

[project.optional-dependencies]
# additional dependencies required for development (outside of mypy)
# for pre-commit hook (and "make lint")
dev = [
    "pre-commit"
]
# dependencies for pre-commit (for mypy):
# .pre-commit-config.yaml uses .pre-commit-run.sh
# to (re)install these in the pre-commit PRIVATE venv
# if this file has changed.
pre-commit = [
]

[project.urls]
"Homepage" = "https://mediacloud.org"
"Bug Tracker" = "https://github.com/mediacloud/es-tools/issues"
"Source Code" = "https://github.com/mediacloud/es-tools"
